Fix navbar overlap issue by setting margin-top matching var(--nav-h) on desktop

--- a/etrolley/src/components/createstore/createstore.css
+++ b/etrolley/src/components/createstore/createstore.css
@@ -14,6 +14,7 @@
 
 @media (min-width: 1181px) {
   .createstore {
+    margin-top: var(--nav-h);
     min-height: calc(100vh - var(--nav-h));
     display: flex;
     align-items: center;
